home page mobile layout bug fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,6 +65,10 @@ font-family: 'Source Sans Pro', sans-serif;
 .App {
 	position: relative;
   min-height: 100vh;
+	top: 0;
+	left: 0;
+	bottom: 0;
 	width: 100%;
 	background-color: var(--primary-background);
 }
+
