--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -1,43 +1,27 @@
 .home {
 	width: 100%;
-	/* height: max-content; */
-	padding-top: 70px;
 	text-align: center;
-	/* position: relative; */
-	/* height: 90vh; */
-	/* border-radius: 50%; */
 }
 
 .hero {
+	padding-top: 70px;
 	background: var(--home-background);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: max-content;
-	max-width: 100%;
+	width: 100%;
+	min-height: max-content; 
+	/* min-height: calc( 100vh - 118px ); */
 	resize: both;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 	font-family: var(--hero-banner-text);
 	font-weight: 900;
-	padding-bottom: 7rem;
-	gap: 5rem;
-
+	padding-bottom: 6rem;
 }
 
 .hero-text-container {
 	color: var(--text-primary-color);
-	/* margin-left: 5rem; */
-	/* display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
-	margin-top: 2rem;
-	gap: 2rem; */
 	width: 80%;
 	margin: auto;
-	height: 100%;
 }
 
 .primary-text {
@@ -57,13 +41,13 @@
 	text-align: left;
 }
 
-.hero-right {
+/* .hero-right {
 	height: inherit;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-right: 5rem;
-}
+} */
 
 .center-link {
 	display: flex;
@@ -103,6 +87,10 @@
 @media screen and (min-width: 667px) {
 	.home {
 		text-align: left;
+	}
+	.hero {
+		min-height: max-content;
+		padding-bottom: 5rem;
 	}
 	.hero-text-container {
 		margin-left: 4rem;
