--- a/client/src/pages/projects/Projects.css
+++ b/client/src/pages/projects/Projects.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	background-color: var(--secondary-background);
 	padding-top: 70px;
-	padding-bottom: 6rem;
+	padding-bottom: 4rem;
 }
 
 .projects-wrapper {
